  * fixed --line for jruby (Zach Moazeni)
  * assorted small changes to support Ruby 1.9 (got a way to go)
  * removed all instances of class << self - I do know who I am
  * SpecParser can't handle backtrace paths with colons (John-Mason P. Shackelford). Closes #505.
  * html formatter (and subsequently the textmate formatter) header fills in completely when running a single example
  
* 7 bug fixes

  * fixed bug where {:a => 1, :b => 2}.should include(:a, :b) failed (Yossef Mendelssohn)
  * only try to load Test::Unit if Test::Unit is defined (not just Test)
  * Allow stubs on parent and child classes simultaneously (Jim Lindley). Fixes #600.
  * BaseTextFormatter will now create the directory in a WHERE string (Adam Anderson). Fixes #616.
  * Removed incorrect -S flag on autospec commands. Added explicit spec command for ruby to run, guarantee running rspec (raggi). Closes #507.
  * Check whether test/unit has really been loaded before calling a method it defines (Brian Donovan). Closes #503.
  * Fix spec_path for shared groups (Zach Dennis). Closes #615.
  
=== Version 1.1.11 / 2008-10-24

* 1 major enhancement

  * eliminate ALL gem dependencies (as they were causing trouble for people on different platforms/environments)

=== Version 1.1.10 / 2008-10-24

* 1 minor enhancement

  * hash.should include(:key => 'value') #when you don't care about the whole hash

* 2 bug fixes

  * fix --help output (had inaccurate info about 'nested' formatter)
  * eliminate spicycode-rcov dev dependency for rubygems < 1.3

=== Version 1.1.9 / 2008-10-20

WARNING: This release removes implicit inclusion of modules in example groups.
This means that if you have 'describe MyModule do', MyModule will not be
included in the group.

* 2 major enhancements

  * Add extend to configuration (thanks to advice from Chad Fowler)
  * Modules are no longer implicitly included in example groups

* 4 minor enhancements

  * mingw indicates windows too (thanks to Luis Lavena for the tip)