@@ -23,7 +23,7 @@
   * SpecParser can't handle backtrace paths with colons (John-Mason P. Shackelford). Closes #505.
   * html formatter (and subsequently the textmate formatter) header fills in completely when running a single example
   
-* 7 bug fixes
+* 8 bug fixes
 
   * fixed bug where {:a => 1, :b => 2}.should include(:a, :b) failed (Yossef Mendelssohn)
   * only try to load Test::Unit if Test::Unit is defined (not just Test)
@@ -32,6 +32,7 @@
   * Removed incorrect -S flag on autospec commands. Added explicit spec command for ruby to run, guarantee running rspec (raggi). Closes #507.
   * Check whether test/unit has really been loaded before calling a method it defines (Brian Donovan). Closes #503.
   * Fix spec_path for shared groups (Zach Dennis). Closes #615.
+  * stubbed message expectation not verified if it has been called *before* the expectation (Matthias Hennemeyer). Closes #637.
   
 === Version 1.1.11 / 2008-10-24
 
